# savegames-bkp

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  README.md  known_games.json
.github/workflows/: windows-release.yml
src/: App.cpp  App.h  BackupManager.cpp  BackupManager.h  ConfigManager.cpp  ConfigManager.h  GameScanner.cpp  GameScanner.h  HistoryWriter.cpp  HistoryWriter.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h  main.cpp  resource.h
